add event function, query param and generation random information
